# forgemind-ai-operations

./: .dockerignore  .env.example  .gitignore  HERMES.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 129270172ebc_create_diagnostic_jobs_table.py  3f5e7a9b21cd_add_phase_2_business_schema.py  b4c5a6b7c8d9_add_auth_tables.py
backend/app/: __init__.py  config.py  database.py  dependencies.py  main.py  worker.py
backend/app/api/: auth.py  components.py  inventory.py  inventory_reservations.py  production_orders.py  production_plans.py  products.py  purchase_orders.py  risks.py  suppliers.py  warehouses.py
backend/app/api/middleware/: correlation.py
backend/app/core/: __init__.py  build_info.py  compute_expected_checksum.py  context.py  correlation.py  dataset_metadata.py  logging.py  security.py
backend/app/jobs/: __init__.py  diagnostics.py
backend/app/models/: __init__.py  component.py  diagnostic.py  enums.py  product.py  production.py  supplier.py  user.py  warehouse.py
backend/app/schemas/: auth.py  component.py  dataset.py  diagnostic.py  health.py  inventory.py  product.py  production.py  purchase_order.py  risk.py  risk_response.py  supplier.py  warehouse.py
backend/app/seed/: __init__.py
backend/app/seed/generator/: __init__.py  auth_dataset.py  golden_dataset.py  loader.py  main.py
backend/app/services/: __init__.py  auth_service.py  bom_explosion.py  dataset_integrity.py  dependency_health.py  diagnostic_jobs.py  inventory_service.py  risk_engine.py
backend/tests/: conftest.py
backend/tests/integration/: conftest.py  test_api_components.py  test_api_inventory.py  test_api_inventory_reservations.py  test_api_production_orders.py  test_api_production_plans.py  test_api_products.py  test_api_purchase_orders.py  test_api_risks.py  test_api_suppliers.py  test_api_warehouses.py  test_dataset_integrity.py  test_risk_endpoint_at004.py  test_risk_engine_with_seed.py  test_wp25_auth_integration.py  test_wp26_auth_integration.py
backend/tests/seed/: __init__.py  _verify_risk_facts.py  test_auth_dataset.py  test_golden_dataset.py  test_loader.py
backend/tests/unit/: test_auth_dependencies.py  test_auth_service.py  test_bom_explosion.py  test_build_info.py  test_config_security.py  test_context.py  test_correlation.py  test_correlation_middleware.py  test_decimal_serializer.py  test_dependency_health.py  test_diagnostic_enqueue_endpoint.py  test_diagnostic_job_status_endpoint.py  test_diagnostic_worker.py  test_golden_dataset_checksum.py  test_health.py  test_health_endpoint.py  test_inventory_service.py  test_logging.py  test_main_lifecycle.py  test_phase2_migration.py  test_phase2_schema.py  test_risk_engine.py  test_security.py  test_wp25_auth_models.py
docs/: next_steps.md
forgemind_project_source_of_truth/: 00_PROJECT_CHARTER.md  01_PRODUCT_AND_MVP_SCOPE.md  02_SYSTEM_BEHAVIOR_AND_DATA.md  03_DEFINITION_OF_DONE.md  04_ACCEPTANCE_TESTS.md  05_DEPLOYMENT_AND_DEMO.md  06_AI_AGENT_EXECUTION_RULES.md  07_ROADMAP.md  08_DECISION_LOG.md  09_MASTER_TASK_FOR_HERMES.md  MANIFEST.md  README.md
frontend/: .gitignore  (+10 more)
(+113 files in other folders)
