[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "forgemind-backend"
version = "0.1.0"
description = "ForgeMind AI Operations - Supply Risk Intelligence Backend"
requires-python = "==3.12.*"
license = { text = "Proprietary" }
authors = [
    { name = "ForgeMind AI Operations" }
]
dependencies = [
    # Web framework
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.32.0,<1.0.0",
    "pydantic>=2.9.0,<3.0.0",
    "pydantic-settings>=2.5.0,<3.0.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.35,<3.0.0",
    "alembic>=1.13.0,<2.0.0",
    "asyncpg>=0.30.0,<1.0.0",
    "psycopg[binary]>=3.2.0,<4.0.0",
    "pgvector>=0.3.0,<1.0.0",

    # Redis and job queue
    "redis>=5.1.0,<6.0.0",
    "arq>=0.26.0,<1.0.0",

    # AI/LLM
    "openai>=1.50.0,<2.0.0",
    "tiktoken>=0.7.0,<1.0.0",

    # Security (WP-2.6)
    "bcrypt>=4.2.0,<5.0.0",
    "PyJWT[crypto]>=2.9.0,<3.0.0",

    # Utilities
    "httpx>=0.27.0,<1.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "structlog>=24.4.0,<25.0.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.3.0,<9.0.0",
    "pytest-asyncio>=0.24.0,<1.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "httpx>=0.27.0,<1.0.0",

    # Linting
    "ruff>=0.6.0,<1.0.0",
    "mypy>=1.11.0,<2.0.0",
    "types-redis>=4.6.0,<5.0.0",

    # Development
    "ipython>=8.0.0,<9.0.0",
    "watchfiles>=0.24.0,<1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "S",  # flake8-bandit (security)
    "A",  # flake8-builtins
    "C4", # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "T20", # flake8-print
    "RET", # flake8-return
    "SIM", # flake8-simplify
]
ignore = [
    "S101",  # Allow assert in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106"]
"backend/tests/**/*.py" = ["S101", "S105", "S106"]
"tests/seed/test_loader.py" = ["E402", "S608"]  # Import after skipif guard; hardcoded table names in dynamic SQL

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --strict-markers --tb=short"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "tests/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
